name:                hackergossip
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hackergossip#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hackergossip
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wreq
                     , lens
                     , aeson
                     , bytestring
                     , containers 
                     , either
                     , lifted-base
                     , resourcet
                     , text
                     , time 
                     , text-binary
                     , monad-logger
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hackergossip
